--- a/site/examples/blog.html
+++ b/site/examples/blog.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <title>TukTuk - Blog Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="stylesheet" href="../../package/tuktuk.css">
-    <link rel="stylesheet" href="../../package/tuktuk.theme.css">
-    <link rel="stylesheet" href="../../package/tuktuk.icons.css">
+    <link rel="stylesheet" href="../package/tuktuk.css">
+    <link rel="stylesheet" href="../package/tuktuk.theme.css">
+    <link rel="stylesheet" href="../package/tuktuk.icons.css">
     <style>
       body > footer img {
           height: 18px;
