--- a/site/examples/landing.html
+++ b/site/examples/landing.html
@@ -5,10 +5,10 @@
     <title>tuktuk - Landing Example</title>
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="stylesheet" href="../../package/tuktuk.css">
-    <link rel="stylesheet" href="../../package/tuktuk.theme.css">
+    <link rel="stylesheet" href="../package/tuktuk.css">
+    <link rel="stylesheet" href="../package/tuktuk.theme.css">
     <!-- TUKTUK.WIDGETS -->
-    <link rel="stylesheet" href="../../package/tuktuk.icons.css">
+    <link rel="stylesheet" href="../package/tuktuk.icons.css">
     <style>
         body > footer img {
           height: 18px;
@@ -27,10 +27,10 @@
     <!-- ========================== HEADER ========================== -->
     <header class="bck margin-top margin-bottom">
         <div class="row">
-            <div class="column_3">
-                <a href="http://tuktuk.tapquo.com" class="logo text bold color theme">tuk<span class="text book">tuk</span></a>
+            <div class="column_6">
+                <h2 class="text color bold">tuk<span class="text thin">tuk</span> <span class="text italic thin small">Landing Template</span></h2>
             </div>
-            <nav class="column_7 offset_2 text right">
+            <nav class="column_6 text right">
                 <a href="#" class="button secondary"><span class="icon user"></span>Login</a>
                 <a href="#" class="button"><span class="icon pencil"></span>Signup</a>
             </nav>
@@ -42,7 +42,6 @@
             <div class="column_10 offset_1">
                 <h1><strong>tuk</strong>tuk</h1>
                 <h2 class="margin-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-                <h5 class="text small book">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
             </div>
         </div>
         <div class="row">
@@ -51,20 +50,20 @@
                 <button class="button large on-right"><span class="icon envelope"></span>Send</button>
             </div>
         </div>
+        <h5 class="text book">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
     </section>
 
     <section class="bck theme padding text center ">
-        <div class="row margin-bottom">
+        <div class="row padding-bottom">
             <div class="column_10 offset_1">
-                <h1 class="text normal">Built for designers and agencies</h1>
+                <h1 class="text book color default">Lorem ipsum dolor sit amet</h1>
                 <h4>
-                    Slidus is designed from the ground-up to support and enhance the
-    workflow of web designers. It’s more than just a slogan for us.
+                    Quam sunt quos minima consequatur dolore quaerat vel recusandae numquam ab qui dignissimos doloribus molestiae pariatur magnam libero nam consectetur asperiores maiores.
                 </h4>
             </div>
         </div>
 
-        <div class="row margin-top">
+        <div class="row padding-top">
             <div class="column_3">
                 <h2 class="icon user"></h2>
                 <h5 class="text normal">Lorem ipsum dolor sit</h5>
@@ -91,7 +90,7 @@
     <section class="bck light padding">
         <div class="row text thin center">
             <div class="column_10 offset_1">
-                <h1>Lorem ipsum dolor sit amet</h1>
+                <h1 class="text book color theme">Lorem ipsum dolor sit amet</h1>
                 <h4>
                     Quam sunt quos minima consequatur dolore quaerat vel recusandae numquam ab qui dignissimos doloribus molestiae pariatur magnam libero nam consectetur asperiores maiores.
                 </h4>
@@ -102,23 +101,23 @@
     <section class="bck lightest landing">
         <div class="row text center">
             <div class="column_10 offset_1">
-                <h2 class="text bold color theme">We're launching soon</h2>
-                <h4 class="text book italic">Join tuk<span class="text bold">tuk</span></h4>
+                <h2 class="text bold color theme">Lorem ipsum dolor sit amet</h2>
+                <h4 class="text book italic">Quam sunt quos minima consequatur</h4>
                 <a href="#" class="button large margin-top">Yes, please!</a>
             </div>
         </div>
     </section>
 
-    <section class="padding bck dark">
+    <section class="padding bck color">
         <div class="row margin-bottom">
             <div class="column_10 offset_1 text center">
-                <h1 class="color theme">Author</h1>
+                <h1 class="color book theme">Author</h1>
                 <h3 class="text thin">Javi Jimenez is the CTO and co-founder of <a href="http://tapquo.com" class="text normal">tapquo</a>. A restless mind that always strives for continuous improvement, able to create frameworks like <a href="http://lungo.tapquo.com" class="text normal">Lungo</a>, <a href="http://quojs.tapquo.com" class="text normal">QuoJS</a>, <a href="http://monocle.tapquo.com" class="text normal">Monocle</a> used by thousands of developers around the world.</h3>
              </div>
          </div>
 
-        <div class="row margin-bottom">
-            <div class="column_4 offset_4 text center white">
+        <div class="row ">
+            <div class="column_4 offset_4 text center">
                 <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="responsive rounded margin-bottom"/>
                 <a href="https://twitter.com/soyjavi" class="twitter-follow-button " data-show-count="true" data-dnt="true">Follow @soyjavi</a>
                 <script>
@@ -128,7 +127,7 @@
         </div>
     </section>
 
-    <footer class="bck darkest padding">
+    <footer class="bck dark padding">
         <div class="row margin-top margin-bottom">
             <div class="column_5">
                 <p class="text bold big">Handcrafted by <a href="http://tapquo.com" class="display inline"><img src="http://cdn.tapquo.com/images/logo_footer.png"/></a></p>
@@ -146,6 +145,6 @@
     </footer>
 
     <script src="components/jquery/jquery.js"></script>
-    <script src="../../package/tuktuk.js"></script>
+    <script src="../package/tuktuk.js"></script>
 </body>
 </html>
