--- a/site/index.html
+++ b/site/index.html
@@ -6,10 +6,10 @@
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- TUKTUK -->
-    <link rel="stylesheet" href="../package/tuktuk.css">
-    <link rel="stylesheet" href="../package/tuktuk.theme.css">
+    <link rel="stylesheet" href="package/tuktuk.css">
+    <link rel="stylesheet" href="package/tuktuk.theme.css">
     <!-- TUKTUK.WIDGETS -->
-    <link rel="stylesheet" href="../package/tuktuk.icons.css">
+    <link rel="stylesheet" href="package/tuktuk.icons.css">
     <style>
           body > header .tapquo > img {
               max-height: 48px; }
@@ -56,7 +56,7 @@
     <section class="padding bck theme features">
         <div class="row text center book">
             <div class="column_10 offset_1">
-                <h1 class="text color white">A new kid on the block</h1>
+                <h1 class="color default">A new kid on the block</h1>
                 <h3>
                     <strong>Not trying</strong> to compete with Bootstrap or Foundation because they play in another league. Just worry about creating responsive and fully extensible sites easily.
                 </h3>
@@ -65,22 +65,22 @@
 
         <div class="row text center normal margin-top">
             <div class="column_3">
-                <h1 class="icon dashboard text color white"></h1>
+                <h1 class="icon dashboard color default"></h1>
                 <h4 class="text color white">CSS3 Powered</h4>
                 <p class="text normal">The premise is to use as much as possible the features of the latest CSS specification. Don't try to use Tuktuk in your hated IE6.</p>
             </div>
             <div class="column_3">
-                <h1 class="icon leaf text color white"></h1>
+                <h1 class="icon leaf text color default"></h1>
                 <h4 class="text color white">Lightweight & fast</h4>
                 <p class="text normal">You don't want to carry heavy stylesheets that only make for a slow loading site. Tuktuk is lightweight at just 9kb gzipped.</p>
             </div>
             <div class="column_3">
-                <h1 class="icon cogs text color white"></h1>
+                <h1 class="icon cogs text color default"></h1>
                 <h4  class="text color white">Object Oriented CSS</h4>
                 <p class="text normal">The purpose is to encourage code reuse plus faster and more efficient stylesheets that are easier to add to and maintain.</p>
             </div>
             <div class="column_3">
-                <h1 class="icon github text color white"></h1>
+                <h1 class="icon github text color default"></h1>
                 <h4  class="text color white">Community Project</h4>
                 <p class="text normal">Each new line of code is welcomed, I hope that developers and restless minds help me improve this humble project day by day.</p>
             </div>
@@ -88,11 +88,11 @@
     </section>
 
     <!-- ========================== DOWNLOADS ========================== -->
-    <section class="padding bck darkest ">
-        <div class="row text center margin-bottom">
+    <section class="padding bck dark">
+        <div class="row text center book margin-bottom">
             <div class="column_10 offset_1">
-                <h1 class="text thin color theme">Downloads</h1>
-                <h3 class="text color white">Sounds cool? Checkout v0.7</h3>
+                <h1 class="color theme">Downloads</h1>
+                <h3>Sounds cool? Checkout v0.7</h3>
             </div>
         </div>
 
@@ -107,11 +107,11 @@
     </section>
 
     <!-- ========================== EXAMPLES ========================== -->
-    <section class="padding bck dark text center">
-        <div class="row margin-bottom">
+    <section class="padding bck color text center">
+        <div class="row text book margin-bottom">
             <div class="column_10 offset_1">
-                <h1 class="text thin color theme">Examples</h1>
-                <h3 class="text color white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, quas, esse!</h3>
+                <h1 class="color theme">Examples</h1>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, quas, esse!</h3>
             </div>
         </div>
 
@@ -146,9 +146,9 @@
 
     <!-- ========================== COLUMNS ========================== -->
     <section class="padding bck lightest text center">
-        <div class="row text thin">
+        <div class="row text book">
             <div class="column_10 offset_1 margin-bottom">
-                <h1 class="text color theme">Turn it up to 12 columns</h1>
+                <h1 class="color theme">Turn it up to 12 columns</h1>
                 <h3>Tuktuk is divided horizontally into a series of 12 columns, and vertically into rows. 12 columns divide nicely into equal columns of two, three, four, or six columns.</h3>
              </div>
         </div>
@@ -187,32 +187,31 @@
 
     <!-- ========================== OFFSETS ========================== -->
     <section class="padding bck light text center">
-        <div class="row text thin">
+        <div class="row text book">
             <div class="column_10 offset_1 margin-bottom">
-                <h1 class="text color theme">Offsetting columns</h1>
+                <h1 class="color theme">Offsetting columns</h1>
                 <h3>You have the option to offset a column, which should make life a little bit easier if you you need to add extra spacing between columns.</h3>
              </div>
         </div>
 
         <div class="row margin-bottom">
-            <div class="column_4 radius bck lightest padding-top padding-bottom">4</div>
-            <div class="column_4 offset_4 radius bck dark text color white padding-top padding-bottom">4 with 4 offset</div>
+            <div class="column_4 offset_4 radius bck color text color white padding-top padding-bottom">4 with 4 offset</div>
         </div>
         <div class="row margin-bottom">
-            <div class="column_3 offset_3 radius bck dark text color white padding-top padding-bottom">3 with 3 offset</div>
-            <div class="column_3 offset_3 radius bck dark text color white padding-top padding-bottom">3 with 3 offset</div>
+            <div class="column_3 offset_3 radius bck color text color white padding-top padding-bottom">3 with 3 offset</div>
+            <div class="column_3 offset_3 radius bck color text color white padding-top padding-bottom">3 with 3 offset</div>
         </div>
         <div class="row">
-            <div class="column_8 offset_4 radius bck dark text color white padding-top padding-bottom">8 with 4 offset</div>
+            <div class="column_8 offset_4 radius bck color text color white padding-top padding-bottom">8 with 4 offset</div>
         </div>
     </section>
 
 
     <!-- ========================== FORMS & TABLES ========================== -->
-    <section class="padding bck lightest">
+    <section class="padding">
          <div class="row">
             <div class="column_4">
-                <h1 class="text book center color theme">Forms & Tables</h1>
+                <h1 class="text book center color theme">Forms</h1>
                 <h3 class="text book center">Make forms look gorgeous regardless of device and browser.</h3>
 
                 <form id="form" name="form" class="margin-top">
@@ -267,8 +266,8 @@
             </div>
 
             <div class="column_4">
-                <div class="row text thin center">
-                    <h1 class=" color theme">Buttons</h1>
+                <div class="row text book center">
+                    <h1 class="color theme">Buttons</h1>
                     <h3>Gallery of styles and sizes that will be enough to interact with your site.</h3>
                     <div class="margin-top">
                         <a href="#" class="button large">Large</a>
@@ -298,8 +297,8 @@
             </div>
 
             <div class="column_4">
-                <h1 class=" color theme text thin center">Tables</h1>
-                <h3 class="text thin center">TukTuk comes with clean styling for table elements like TH, odds...</h3>
+                <h1 class="color theme text book center">Tables</h1>
+                <h3 class="text book center">TukTuk comes with clean styling for table elements like TH, odds...</h3>
                 <table class="margin-top">
                     <thead>
                         <tr>
@@ -349,25 +348,25 @@
     <!-- ========================== Typography ========================== -->
     <section class="padding bck light">
         <div class="row ">
-            <div class="column_10 offset_1 text center margin-bottom">
-                <h1 class="text color theme">Typography</h1>
-                <h3 class="text thin">Discover how you can play with the style of any element using style inheritance with ooCSS.</h3>
+            <div class="column_10 offset_1 text center book margin-bottom">
+                <h1 class="color theme">Typography</h1>
+                <h3>Discover how you can play with the style of any element using style inheritance.</h3>
              </div>
         </div>
 
         <div class="row">
             <div class="offset_1 column_2">
                 <h4><span class="text bold">.color</span> class</h4>
-                <h6>color normal</h6>
-                <h6 class="text color theme">color theme</h6>
+                <h6 class="color white">.white</h6>
+                <h6>.normal</h6>
+                <h6 class="color theme">.theme</h6>
             </div>
             <div class="column_2">
                 <h4><span class="text bold">.bck</span> class</h4>
-                <h6 class="bck lightest">lightest</h6>
-                <h6 class="bck light">light</h6>
-                <h6 class="bck dark text color white">dark</h6>
-                <h6 class="bck darkest text color white">darkest</h6>
-                <h6 class="bck theme">theme</h6>
+                <h6 class="bck light">.light</h6>
+                <h6 class="bck color">.color</h6>
+                <h6 class="bck dark">.dark</h6>
+                <h6 class="bck theme">.theme</h6>
             </div>
             <div class="column_2">
                 <h4><span class="text bold">.text</span> class</h4>
@@ -400,9 +399,9 @@
     <!-- ========================== LISTS ========================== -->
     <section class="padding">
         <div class="row">
-            <div class="column_10 offset_1 text center margin-bottom">
-                <h1 class="text color theme">Lists</h1>
-                <h3 class="text thin">If buttons are important, so are lists. Tuktuk comes with a group of styles easily usable.</h3>
+            <div class="column_10 offset_1 text center book margin-bottom">
+                <h1 class="color theme">Lists</h1>
+                <h3>If buttons are important, so are lists. Tuktuk comes with a group of styles easily usable.</h3>
              </div>
         </div>
 
@@ -480,9 +479,9 @@
     <!-- ========================== Show & hide ========================== -->
     <section class="padding bck light">
         <div class="row margin-bottom">
-            <div class="column_10 offset_1 text center ">
-                <h1 class="text color theme">Show & Hide</h1>
-                <h3 class="text thin">There are times when you may need to only show something on a desktop and not on a tablet or phone or the other way around. TukTuk will do all the work for you with some extra classes to hide & show content.</h3>
+            <div class="column_10 offset_1 text center book">
+                <h1 class="color theme">Show & Hide</h1>
+                <h3>There are times when you may need to only show something on a desktop and not on a tablet or phone or the other way around. TukTuk will do all the work for you with some extra classes to hide & show content.</h3>
              </div>
         </div>
 
@@ -520,22 +519,51 @@
     </section>
 
     <!-- ========================== Navigation ========================== -->
-    <section class="padding bck lightest">
-        <div class="row ">
-            <div class="column_10 offset_1 text center">
-                <h1 class="text color theme">Navigation</h1>
-                <h3 class="text thin">Need a navigation menu that works both in a desktop and a mobile?</h3>
+    <section class="padding bck lightest  text center book">
+        <div class="row">
+            <div class="column_10 offset_1">
+                <h1 class="color theme">Navigation</h1>
+                <h3 >Need a navigation menu that works both in a desktop and a mobile?</h3>
              </div>
         </div>
     </section>
     <section class="bck dark">
         <div class="row text center">
-            <nav class="group text bold">
-                <a href="#" class="active"><span class="icon ok"></span>Slides</a>
-                <a href="#"><span class="icon ok"></span>Themes</a>
-                <a href="#"><span class="icon ok"></span>Applications</a>
-                <a href="#"><span class="icon ok"></span>Friends</a>
-                <a href="#"><span class="icon ok"></span>Favorites</a>
+            <nav data-tuktuk="menu" class="column_12 padding text bold">
+                <a href="#" class="active"><span class="icon camera"></span>Shots<small>(100)</small></a>
+                <a href="#"><span class="icon heart"></span>Likes<small>(3)</small></a>
+                <a href="#"><span class="icon group"></span>Following<small>(192)</small></a>
+                <a href="#"><span class="icon star"></span>Debuts<small>(160)</small></a>
+            </nav>
+        </div>
+    </section>
+    <section class="bck color">
+        <div class="row text center">
+            <nav data-tuktuk="menu" class="column_12 padding text bold">
+                <a href="#" ><span class="icon camera"></span>Shots<small>(100)</small></a>
+                <a href="#" class="active"><span class="icon heart"></span>Likes<small>(3)</small></a>
+                <a href="#"><span class="icon group"></span>Following<small>(192)</small></a>
+                <a href="#"><span class="icon star"></span>Debuts<small>(160)</small></a>
+            </nav>
+        </div>
+    </section>
+    <section class="bck light">
+        <div class="row text center">
+            <nav data-tuktuk="menu" class="column_12 padding text bold">
+                <a href="#" ><span class="icon camera"></span>Shots<small>(100)</small></a>
+                <a href="#"><span class="icon heart"></span>Likes<small>(3)</small></a>
+                <a href="#" class="active"><span class="icon group"></span>Following<small>(192)</small></a>
+                <a href="#"><span class="icon star"></span>Debuts<small>(160)</small></a>
+            </nav>
+        </div>
+    </section>
+    <section>
+        <div class="row text center">
+            <nav data-tuktuk="menu" class="column_12 padding text bold">
+                <a href="#" ><span class="icon camera"></span>Shots<small>(100)</small></a>
+                <a href="#"><span class="icon heart"></span>Likes<small>(3)</small></a>
+                <a href="#"><span class="icon group"></span>Following<small>(192)</small></a>
+                <a href="#" class="active"><span class="icon star"></span>Debuts<small>(160)</small></a>
             </nav>
         </div>
     </section>
@@ -543,9 +571,9 @@
     <!-- ========================== Modals ========================== -->
     <section class="padding bck light">
         <div class="row">
-            <div class="column_10 offset_1 text center">
-                <h1 class="text color theme">Modals</h1>
-                <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+            <div class="column_10 offset_1 text center book">
+                <h1 class="color theme">Modals</h1>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
              </div>
         </div>
         <div class="row margin-top margin-bottom text center">
@@ -557,9 +585,9 @@
 
     <!-- ========================== Widgets ========================== -->
     <section class="padding bck lightest">
-        <div class="row text thin">
+        <div class="row text book">
             <div class="column_10 offset_1 text center margin-bottom">
-                <h1 class="text color theme">tuktuk.<strong>icons</strong>.css</h1>
+                <h1 class="color theme">tuktuk.<strong>icons</strong>.css</h1>
                 <h3>If all of the above isn't enough, take a look at how you can easily extend TukTuk's functionality in your projects.</h3>
              </div>
         </div>
@@ -822,11 +850,11 @@
 
 
     <!-- ========================== AUTHOR ========================== -->
-    <section class="padding bck dark">
+    <section class="padding bck color">
         <div class="row margin-bottom">
-            <div class="column_10 offset_1 text center">
+            <div class="column_10 offset_1 text center book">
                 <h1 class="color theme">Author</h1>
-                <h3 class="text thin">Javi Jimenez is the CTO and co-founder of <a href="http://tapquo.com" class="text normal">tapquo</a>. A restless mind that always strives for continuous improvement, able to create frameworks like <a href="http://lungo.tapquo.com" class="text normal">Lungo</a>, <a href="http://quojs.tapquo.com" class="text normal">QuoJS</a>, <a href="http://monocle.tapquo.com" class="text normal">Monocle</a> used by thousands of developers around the world.</h3>
+                <h3>Javi Jimenez is the CTO and co-founder of <a href="http://tapquo.com" class="text normal">tapquo</a>. A restless mind that always strives for continuous improvement, able to create frameworks like <a href="http://lungo.tapquo.com" class="text normal">Lungo</a>, <a href="http://quojs.tapquo.com" class="text normal">QuoJS</a>, <a href="http://monocle.tapquo.com" class="text normal">Monocle</a> used by thousands of developers around the world.</h3>
              </div>
          </div>
 
@@ -843,7 +871,7 @@
 
 
     <!-- ========================== FOOTER ========================== -->
-    <footer class="bck darkest padding">
+    <footer class="bck dark padding">
         <div class="row margin-top margin-bottom">
             <div class="column_5">
                 <p class="text bold big">Handcrafted by <a href="http://tapquo.com" class="display inline"><img src="http://cdn.tapquo.com/images/logo_footer.png"/></a></p>
@@ -888,6 +916,6 @@
 
     <!-- TUKTUK.WIDGETS -->
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-    <script src="../package/tuktuk.js"></script>
+    <script src="package/tuktuk.js"></script>
 </body>
 </html>
